bugfix:解决cglib在模块系统的访问限制问题