@@ -14,4 +14,5 @@ EXPOSE 8500
 # 执行启动命令.
 # 写多行独立的CMD命令是错误写法！只有最后一行CMD命令会被执行，之前的都会被忽略，导致业务报错。
 # 请参考[Docker官方文档之CMD命令](https://docs.docker.com/engine/reference/builder/#cmd)
-CMD ["java", "-Xms256m", "-Xmx512m", "-jar", "/app/apply-room-record.jar"]
+# 执行启动命令，添加 --add-opens 解决模块访问限制问题
+CMD ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Xms64m", "-Xmx128m", "-jar", "/app/apply-room-record.jar"]
